Fix left navbar not opening and right navbar z-index

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,7 +57,7 @@ body {
     height: 100%; 
     width: 0;
     position: fixed;
-    z-index: 1; 
+    z-index: 5; 
     top: 0;
     background-color: #222;
     overflow-x: hidden; /* Disable horizontal scroll */
